# mdtoken

./: .gitignore  .mcp.json  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: README.md  implementation-plan.md  settings.json  state.json
.claude/transitions/2025-11-02/: 162756.md  174758.md  184413.md  205859.md  214823.md
.github/workflows/: test.yml
docs/: api.md  examples.md  exploration.md  faq.md  requirements.md  troubleshooting.md
src/mdtoken/: __init__.py  __version__.py  cli.py  config.py  counter.py  enforcer.py  matcher.py  reporter.py
src/mdtoken/commands/: __init__.py  check.py
tests/: test_config.py  test_counter.py  test_edge_cases.py  test_enforcer.py  test_matcher.py  test_performance.py  test_pre_commit_integration.py
tests/fixtures/: .pre-commit-config.yaml  invalid_config.yaml  invalid_yaml.yaml  minimal_config.yaml  valid_config.yaml
tests/fixtures/performance/: generate_fixtures.py  large_29.md  medium_06.md  small_01.md
tests/integration/: test_git_workflow.py
